# hstl

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: apps.py  forms.py  models.py  urls.py  views.py
app/static/: index_script.js  index_style.css  site.webmanifest
app/templates/: 404.html  index.html
app/templates/root/: newStudent.html
django_hstl/: apps.py  forms.py  models.py  urls.py  views.py
django_hstl/migrations/: 0001_initial.py
django_hstl/static/: base.css
django_hstl/static/root/: style.css
django_hstl/templates/: 404.html  base.html  index.html
django_hstl/templates/root/: index.html  infoStaff.html  infoStudent.html  newStaff.html  newStudent.html
django_hstl/templates/staff/: index.html
django_hstl/templates/student/: index.html
hostelManagement/: asgi.py  settings.py  urls.py  wsgi.py
root/: forms.py  urls.py  views.py
root/templates/: base.html
root/templates/root/: home.html  index.html
staff/: urls.py  views.py
staff/templates/: base.html
staff/templates/staff/: index.html
static/: index_script.js  index_style.css
static/root/: style.css
static/staff/: style.css
student/: forms.py  models.py  urls.py  views.py
student/static/student/: style.css
student/templates/: base.html
student/templates/student/: home.html  index.html
template/: 404.html  base.html  index.html
template/root/: home.html  index.html  newStaff.html  newStudent.html
template/staff/: index.html
template/student/: home.html  index.html
